2005-01-24
----------
* recognize postfix/error bounces

2004-11-04
----------
* ignore per-recipient log entries of new amavisd-new versions

2004-10-21
----------
* dspam support (Nagilum)
* change CGI to use parameters instead of PATH_INFO, which not all web-servers support

2004-10-04
----------
* Avoid showing "milli-messages/s" on the y scale (R.M. Evers)
* Added --rbl-is-spam flag (David Gibbs)
* Sendmail fixes (David Gibbs)
* amavisd-new <= 20030616 (R.M. Evers)

2004-08-18
----------
* Sendmail fixes (David Gibbs)
* Line intead of area for rejects

2004-07-11
----------
* released version 1.9
* implemented --ignore-host=HOST (use it instead of --ignore-localhost if the
  antivirus is on another machine)
* add automatic refresh to mailgraph.cgi (Frederic Massot)
* reorganized  RRDs::graph call to make it easier to move one line from the normal
  plot to the error plot and vice versa
* --only-virus-rrd bugfix (Marlon Dutra)
* support metalog with --type=metalog and FreeBSD's verbose logging (Parse::Syslog 1.04)

2004-05-06
----------
* cosmetic changes of the CGI output
* show with commented code how to tag as spam all RBL rejects
  (Philip Hallstrom)

2004-04-03
----------
* added support for clamav-milter (David Gibbs)

2004-02-09
----------
* update sendmail regexps (Hugo van der Kooij)

2004-02-07
----------
* released 1.8
* amavisd: count spam to "spam-lovers" (D_PASS)
* initial sendmail support (Hugo van der Kooij)
* added --rrd-name option (Tycho Fruru)

2004-01-29
----------
* released 1.7
* --ignore-localhost didn't work correctly (Samuel Kesterson)

2004-01-19
----------
* released 1.6
* do not parse lines with timestamps in the future (warn instead)

2004-01-19
----------
* released 1.5
* New amavisd code by Mark Martinec
* Removed parsing for 'pipe' service since it doesn't make much sense
* Support for MailScanner/SpamAssassin (Gabriele Oleotti)
* Support for latest Postfix snapshot (Ralf Hildebrandt)
* Support for bounces with Cyrus (Will)